Bug 939970 - Only convert XPath result to type requested. r=sicking.